v2.55 REDUCEConfigDialog: Expand a leading ~ to the user's home directory in command argument fields. Update the User Guide.